@@ -96,6 +96,11 @@ void Net_API uninitializeNetwork();
 } } // namespace Poco::Net
 
 
+// Define to enable IPv6 support
+#if !defined (POCO_HAVE_IPv6)
+	#define POCO_HAVE_IPv6
+#endif // POCO_HAVE_IPv6
+
 #if !defined(s6_addr16)
 	#if defined(POCO_OS_FAMILY_WINDOWS)
 		#define s6_addr16 u.Word
